# ok-dmrlib

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: sanity.yml
okdmr/: .gitignore
okdmr/dmrlib/coding/: trellis.py
okdmr/dmrlib/etsi/coding/: bptc_196_96.py
okdmr/dmrlib/etsi/crc/: crc.py  crc16.py  crc32.py  crc7.py  crc8.py  crc9.py  crc_masks.py
okdmr/dmrlib/etsi/fec/: bptc_196_96.py  fec_utils.py  five_bit_checksum.py  golay_20_8_7.py  hamming_13_9_3.py  hamming_15_11_3.py  hamming_16_11_4.py  hamming_17_12_3.py  hamming_7_4_3.py  hamming_common.py  quadratic_residue_16_7_6.py  reed_solomon_12_9_4.py  trellis.py  vbptc_128_72.py  vbptc_32_11.py  vbptc_68_28.py
okdmr/dmrlib/etsi/layer2/: burst.py  general_data_burst.py  sync_patterns.py
okdmr/dmrlib/etsi/layer2/coding/: trellis.py
okdmr/dmrlib/etsi/layer2/elements/: __init__.py  access_types.py  burst_type.py  burst_types.py  crc_masks.py  csbk_opcodes.py  data_packet_formats.py  data_types.py  defined_data_formats.py  feature_set_ids.py  flcos.py  fragment_sequence_number.py  full_message_flag.py  lcss.py  preemption_power_indicator.py  resynchronize_flag.py  sap_identifier.py  sarq.py  slcos.py  supplementary_flag.py  sync_patterns.py  sync_types.py  udt_format.py  voice_bursts.py
okdmr/dmrlib/etsi/layer2/pdu/: __init__.py  csbk.py  data_header.py  embedded_signalling.py  full_link_control.py  pi_header.py  rate12_data.py  rate1_data.py  rate34_data.py  reverse_channel.py  short_link_control.py  slot_type.py
okdmr/dmrlib/etsi/layer3/elements/: activity_id.py  additional_information_field.py  announcement_type.py  answer_response.py  channel_timing_opcode.py  dynamic_identifier.py  ip_address_identifier.py  position_error.py  random_access_service_function.py  reason_code.py  reverse_channel_command.py  service_options.py  source_type.py  talker_alias_data_format.py  udp_port_identifier.py  udt_option_flag.py
okdmr/dmrlib/etsi/layer3/pdu/: csbk.py  udp_ipv4_compressed_header.py
okdmr/dmrlib/hytera/: hytera_constants.py  hytera_ipsc.py  hytera_ipsc_sync.py  hytera_ipsc_wakeup.py  snmp.py
okdmr/dmrlib/hytera/ipsc_elements/: call_type.py  frame_type.py  packet_type.py  slot_type.py  timeslot.py
okdmr/dmrlib/hytera/pdu/: hdap.py  hrnp.py  hstrp.py  location_protocol.py  radio_control_protocol.py  radio_ip.py  radio_registration_service.py  text_message_protocol.py
okdmr/dmrlib/motorola/: arrp.py  automatic_registration_service.py  lrrp.py  mbxml.py  text_messaging_service.py
okdmr/dmrlib/protocols/: .gitignore
okdmr/dmrlib/protocols/hytera/: hrnp_datagram_protocol.py  hstrp_datagram_protocol.py  p2p_datagram_protocol.py  rdac_datagram_protocol.py  rrs_datagram_protocol.py
okdmr/dmrlib/protocols/mmdvm/: mmdvm_client_protocol.py
okdmr/dmrlib/protocols/motorola/: .gitkeep
okdmr/dmrlib/storage/: __init__.py  repeater.py  repeater_storage.py
okdmr/dmrlib/tools/: dmrlib_tool.py  dsp_tool.py  hrnp_client.py  hytera_tool.py  pcap_tool.py
okdmr/dmrlib/transmission/: burst_info.py  terminal.py  timeslot.py  transmission.py  transmission_generator.py  transmission_observer_interface.py  transmission_types.py  transmission_watcher.py
okdmr/dmrlib/utils/: bits_bytes.py  bits_interface.py  bytes_interface.py  log_color_formatter.py  logging_trait.py  parsing.py  protocol_tool.py
okdmr/tests/dmrlib/: tests_utils.py
okdmr/tests/dmrlib/coding/: test_trellis.py
okdmr/tests/dmrlib/etsi/: test_golay_20_8_7.py
okdmr/tests/dmrlib/etsi/coding/: test_bptc_196_96.py  test_trellis.py
okdmr/tests/dmrlib/etsi/crc/: test_crc.py  test_crc16.py  test_crc32.py  test_crc8.py  test_crc9.py
okdmr/tests/dmrlib/etsi/fec/: test_bptc_196_96.py  test_five_bit_checksum.py  test_hamming_13_9_3.py  test_hamming_15_11_3.py  test_hamming_16_11_4.py  test_hamming_17_12_3.py  test_hamming_7_4_3.py  test_quadratic_residue_16_7_6.py  test_reed_solomon_12_9_4.py  test_trellis.py  test_vbptc_128_72.py  test_vbptc_32_11.py  test_vbptc_68_36.py
okdmr/tests/dmrlib/etsi/layer2/: test_burst.py  test_sync_patterns.py
okdmr/tests/dmrlib/etsi/layer2/coding/: test_trellis.py
okdmr/tests/dmrlib/etsi/layer2/elements/: test_data_packet_formats.py  test_data_types.py  test_defined_data_formats.py  test_feature_set_ids.py  test_fragment_sequence_number.py  test_sap_identifier.py  test_slcos.py  test_sync_patterns.py  test_sync_types.py  test_udt_format.py
okdmr/tests/dmrlib/hytera/: test_hytera_ipsc.py  test_snmp.py
okdmr/tests/dmrlib/hytera/app/: test_hrnp_app.py  test_rrs_app.py
okdmr/tests/dmrlib/hytera/pdu/: test_hdap.py  test_hrnp.py  test_hstrp.py  test_lp.py  test_radio_ip.py  test_rcp.py  test_rrs.py  test_tmp.py
okdmr/tests/dmrlib/motorola/: test_arrp.py  test_ars.py  test_lrrp.py  test_mbxml.py  test_tms.py
okdmr/tests/dmrlib/protocols/hytera/: test_hstrp_datagram_protocol.py
okdmr/tests/dmrlib/protocols/mmdvm/: test_mmdvm.py
okdmr/tests/dmrlib/storage/: test_repeater.py  test_repeater_storage.py
okdmr/tests/dmrlib/tools/: test_dmrlib_tool.py  test_dsp_tool.py  test_hrnp_client.py  test_hytera_tool.py  test_pcap_tool.py
okdmr/tests/dmrlib/transmission/: test_burst_info.py  test_transmission.py
okdmr/tests/dmrlib/utils/: test_bits_bytes.py  test_logging.py  test_parsing.py
(+25 files in other folders)
